docs(readme): add link to GitHub Pages site

--- a/README.adoc
+++ b/README.adoc
@@ -4,10 +4,12 @@
 Projet rassemblant des notes sur le thème de la photographie.
 Prévu pour être publié via GitHub Pages.
 Les pages sont écrites en AsciiDoc puis compilées en HTML via le script `build.sh`.
-L’accueil est `index.html`.
+L’accueil est `index.html`. +
+→ https://alice-mm.github.io/photonotes/[]
 
 .🇬🇧 / 🇺🇸
 _Project hosting notes related to photography.
 Meant for publication via GitHub Pages.
 The pages are written in AsciiDoc and compiled to HTML via the `build.sh` script.
-The home page is `index.html`._
+The home page is `index.html`._ +
+→ https://alice-mm.github.io/photonotes/[]
